--- a/bittr/Info.plist
+++ b/bittr/Info.plist
@@ -21,9 +21,10 @@
 			</array>
 		</dict>
 	</dict>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>Allow bittr to add this screenshot to your Photo Library.</string>
-	<key>NSCameraUsageDescription</key>
-	<string>Allow bittr to scan a QR code.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
 </dict>
 </plist>
