--- a/bittr.xcodeproj/xcshareddata/xcschemes/bittr.xcscheme
+++ b/bittr.xcodeproj/xcshareddata/xcschemes/bittr.xcscheme
@@ -74,6 +74,13 @@
             ReferencedContainer = "container:bittr.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "MALLOC_ALLOW_LARGE_REQUESTS"
+            value = "1"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
          <AdditionalOption
             key = "MallocStackLogging"
